# warehouse-agentic-saler

./: main.py  pyproject.toml
order_processor/: README.md  pyproject.toml
order_processor/src/order_processor/: crew.py  main.py
order_processor/src/order_processor/config/: agents.yaml  crewai.yaml  tasks.yaml
