[project]
name = "order_processor"
version = "0.1.0"
description = "Order processor using crewAI"
authors = [{ name = "Rolando", email = "redaumore@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "google-genai",         # Para integración con Gemini
    "requests"              # Útil para llamadas HTTP si las necesitas
]

[project.scripts]
order_processor = "order_processor.main:run"
run_crew = "order_processor.main:run"
train = "order_processor.main:train"
replay = "order_processor.main:replay"
test = "order_processor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"